--- a/greatKanji/flashcards/app/css/style.css
+++ b/greatKanji/flashcards/app/css/style.css
@@ -1,7 +1,9 @@
 #operationContainer {}
 
 #calculationContainer {
-  padding-top: 10%;
+  top:10%;
+  left:33%;
+  position:absolute;
   width: 33%;
   margin-left: auto;
   margin-right: auto;
@@ -19,4 +21,15 @@
 
 #operationAnswer {
   text-align: right;
+}
+#mainContainer{
+  background-color: gray;
+  height: 500px;
+  position:absolute;
+}
+#myAnimations{
+  height:500px;
+  top:0;
+
+  position: relative;
 }
