--- a/greatKanji/flashcards/views/index.html
+++ b/greatKanji/flashcards/views/index.html
@@ -15,10 +15,12 @@
     </div>
   </body>
 </html>
-
+<!--C:\Program Files (x86)\Google\Chrome\Application\chrome.exe --allow-file-access-from-files-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.min.js">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script src="../app/app.js"></script>
+<script src="../app/services/animationService.js"></script>
 <script src="../app/controllers/mainController.js"></script>
