--- a/greatKanji/flashcards/app/css/style.css
+++ b/greatKanji/flashcards/app/css/style.css
@@ -1,3 +1,7 @@
+.progress-bar {
+    -webkit-transition: none !important;
+    transition: none !important;
+}
 #operationContainer {}
 
 #calculationContainer {
