--- a/greatKanji/flashcards/views/mainView.html
+++ b/greatKanji/flashcards/views/mainView.html
@@ -65,4 +65,16 @@
 
 <div class="col-md-2"></div>
 </div>
+<div class="row">
+<div class="col-md-2"></div>
+<div class="col-md-8">
+  <div class="progress" style="margin-top:5px;">
+    <div id="myProgressBar" class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:100%">
+      <span class="sr-only">70% Complete</span>
+    </div>
+    </div>
+</div>
+<div class="col-md-2"></div>
+</div>
+
 </div>
