--- a/greatKanji/kanji/views/mainView.html
+++ b/greatKanji/kanji/views/mainView.html
@@ -9,11 +9,11 @@
   <div class="col-md-2"></div>
 </div>
 
-<table>
-  <tr ng-repeat="x in names">
-    <td>{{ x.Name }}</td>
-    <td>{{ x.City }}</td>
-     <td>{{ x.Country }}</td>
+<table class="table table-hover">
+  <tr class="row" ng-repeat="x in names">
+    <td class="col-md-4">{{ x.Name }}</td>
+    <td class="col-md-4">{{ x.City }}</td>
+     <td class="col-md-4">{{ x.Country }}</td>
   </tr>
 </table>
 
