--- a/greatKanji/flashcards/views/mainView.html
+++ b/greatKanji/flashcards/views/mainView.html
@@ -44,10 +44,15 @@
       </button>
       <button type="button" class="btn btn-default">
       Number of Questions
-    </button>
-  </div>
-<input class="form-control numWidth" ng-model="numQuestions">
-
+     </button>
+     </div>
+  <input class="form-control numWidth" ng-model="numQuestions">
+  <div class="input-group-btn">
+    <button type="button" class="btn btn-default">
+   Time to answer
+   </button>
+   </div>
+<input class="form-control numWidth" ng-model="numSeconds">
 <div class="input-group-btn">
   <button type="button" class="btn btn-default active"><span class="glyphicon glyphicon-play"></button>
   <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-pause"></button></button>
