--- a/greatKanji/flashcards/views/mainView.html
+++ b/greatKanji/flashcards/views/mainView.html
@@ -53,7 +53,7 @@
    </button>
    </div>
 <input class="form-control numWidth" ng-model="numSeconds">
-<div class="input-group-btn">
+<div class="input-group-btn">2
   <button type="button" class="btn btn-default active"><span class="glyphicon glyphicon-play"></button>
   <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-pause"></button></button>
 </div>
