--- a/greatKanji/flashcards/views/mainView.html
+++ b/greatKanji/flashcards/views/mainView.html
@@ -4,6 +4,7 @@
   <div class="col-md-12">
   <div id="mainContainer">
   <canvas id="myAnimations"></canvas>
+
   <div id="calculationContainer">
     <table>
       <tr>
@@ -39,7 +40,7 @@
     <span class="input-group-addon" id="sizing-addon1">Max</span>
     <input type="number" class="form-control numWidth" ng-model="maxValue">
     <div class="input-group-btn">
-      <button type="button" class="btn btn-default active">
+      <button type="button" class="btn btn-default activne">
       <strong>  &#8734;</strong>
       </button>
       <button type="button" class="btn btn-default">
@@ -57,7 +58,7 @@
   <button type="button" class="btn btn-default active"><span class="glyphicon glyphicon-play"></button>
   <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-pause"></button></button>
 </div>
-
+<div id="score">{{score}}</div>
   </div>
 
 
