--- a/greatKanji/kanji/views/mainView.html
+++ b/greatKanji/kanji/views/mainView.html
@@ -11,9 +11,9 @@
 
 <table class="table table-hover">
   <tr class="row" ng-repeat="x in names">
-    <td class="col-md-4">{{ x.Name }}</td>
-    <td class="col-md-4">{{ x.City }}</td>
-     <td class="col-md-4">{{ x.Country }}</td>
+    <td class="col-md-4">{{ x.id }}</td>
+    <td class="col-md-4 pangolin">{{ x.radical }}</td>
+     <td class="col-md-4">{{ x.code }}</td>
   </tr>
 </table>
 
