--- a/greatKanji/flashcards/views/mainView.html
+++ b/greatKanji/flashcards/views/mainView.html
@@ -24,52 +24,45 @@
 </div>
 </div>
 <div class="row" id="controls">
-  <div class="col-md-2"></div>
-  <div class="col-md-8">
+
+  <div class="col-md-12">
     <div class="input-group">
-  <div class="input-group-btn stayPressed" role="group" aria-label="operators">
-    <button type="button" class="btn btn-default active" data-sign="+">+</button>
-    <button type="button" class="btn btn-default" data-sign="-">-</button>
-    <button type="button" class="btn btn-default" data-sign="x">x</button>
-    <button type="button" class="btn btn-default" data-sign="%">%</button>
-    <button type="button" class="btn btn-default clearButton" data-sign="">C</button>
-  </div>
- <span class="divider"></span>
+    <div class="input-group-btn stayPressed" role="group" aria-label="operators">
+      <button type="button" class="btn btn-default active" data-sign="+">+</button>
+      <button type="button" class="btn btn-default" data-sign="-">-</button>
+      <button type="button" class="btn btn-default" data-sign="x">x</button>
+      <button type="button" class="btn btn-default" data-sign="%">%</button>
+      <button type="button" class="btn btn-default clearButton" data-sign="">C</button>
+    </div>
+
     <span class="input-group-addon" id="sizing-addon2">Min</span>
     <input type="number" class="form-control numWidth" ng-model="minValue">
     <span class="input-group-addon" id="sizing-addon1">Max</span>
     <input type="number" class="form-control numWidth" ng-model="maxValue">
+
+    <span class="input-group-addon" id="sizing-addon2">Number of Questions</span>
+    <span class="input-group-addon" id="sizing-addon2"></span>
     <div class="input-group-btn">
-      <button type="button" class="btn btn-default activne">
-      <strong>  &#8734;</strong>
+      <button type="button" class="btn btn-default active">
+      <strong>&#8734;</strong>
       </button>
-      <button type="button" class="btn btn-default">
-      Number of Questions
-     </button>
      </div>
+
   <input class="form-control numWidth" ng-model="numQuestions">
-  <div class="input-group-btn">
-    <button type="button" class="btn btn-default">
-   Time to answer
-   </button>
-   </div>
+  <span class="input-group-addon" id="sizing-addon2">Time to answer</span>
 <input class="form-control numWidth" ng-model="numSeconds">
 <div class="input-group-btn">2
   <button type="button" class="btn btn-default active"><span class="glyphicon glyphicon-play"></button>
   <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-pause"></button></button>
 </div>
-<div id="score">{{score}}</div>
-  </div>
-
-
-
+<span class="input-group-addon" id="score">{{score}}</span>
+  </div><!--end input group-->
 <!--span>
 {{data}}<br>
 {{status}}
 </span-->
-</div>
+</div><!--end col-->
 
-<div class="col-md-2"></div>
 </div>
 <div class="row">
 <div class="col-md-2"></div>
