--- a/greatKanji/kanji/views/mainView.html
+++ b/greatKanji/kanji/views/mainView.html
@@ -12,8 +12,8 @@
 <table class="table table-hover">
   <tr class="row" ng-repeat="x in names">
     <td class="col-md-4">{{ x.id }}</td>
-    <td class="col-md-4 pangolin">{{ x.radical }}</td>
-     <td class="col-md-4">{{ x.code }}</td>
+    <td class="col-md-4 pangolin">{{ x.kanji}}</td>
+     <td class="col-md-4">{{ x.onR }}</td>
   </tr>
 </table>
 
