--- a/greatKanji/kanji/views/mainView.html
+++ b/greatKanji/kanji/views/mainView.html
@@ -1,5 +1,23 @@
 <div ng-controller="mainCtrl"><!--cannot have this twice-->
 
+  <div id="myModal" class="modal fade" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title"></h4>
+        </div>
+        <div class="modal-body">
+          <p></p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Ok</button>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
+
 <div class="row">
   <div class="col-md-12">Testing</div>
 <div>
@@ -8,13 +26,31 @@
   <div class="col-md-10"><button type="button" class="btn btn-default">Okay</button></div>
   <div class="col-md-2"></div>
 </div>
-
+{{updateResponse}}
 <table class="table table-hover">
+  <caption>Radicals</caption>
+  <tr class="row"><th>id</th><th>radical</th><th>code</th><th>meaning</th><th>similar</th><th>update</th><th>delete</th></tr>
   <tr class="row" ng-repeat="x in names">
-    <td class="col-md-4">{{ x.id }}</td>
-    <td class="col-md-4 pangolin">{{ x.kanji}}</td>
-     <td class="col-md-4">{{ x.onR }}</td>
+    <td class="col-md-1"><input class="form-control" ng-model="x.id"/></td>
+    <td class="col-md-1 pangolin"><input class="form-control" ng-model="x.radical"/></td>
+    <td class="col-md-2"><input class="form-control" ng-model="x.code"/></td>
+    <td class="col-md-2"><input class="form-control" ng-model="x.meaning"/></td>
+    <td class="col-md-2"><input class="form-control" ng-model="x.similar"/></td>
+    <td class="col-md-2"><button type="button" ng-click="updateRadical(x)" data-id="x.id" class="btn btn-default del">Update</button></td>
+    <td class="col-md-2"><button type="button" ng-click="deleteRadical(x.id)" data-id="x.id" class="btn btn-default del">X</button></td>
   </tr>
 </table>
-
+{{deleteResponse}}
+<table class="table table-hover">
+  <caption>Radicals</caption>
+  <tr class="row"><th>radical</th><th>code</th><th>meaning</th><th>similar</th><th>add</th></tr>
+  <tr class="row" id="addRow" >
+    <td class="col-md-2"><input class="form-control" type="text" data-field="radical" value="hey"/></td>
+    <td class="col-md-2"><input class="form-control" type="text" data-field="code" value="ho"/></td>
+    <td class="col-md-4"><input class="form-control" type="text" data-field="meaning" value="lets"/></td>
+    <td class="col-md-2"><input class="form-control" type="text" data-field="similar" value="go"/></td>
+    <td class="col-md-2"><button type="button" ng-click="addRadical()" class="btn btn-default del">Add</button></td>
+  </tr>
+</table>
+{{addResponse}}
 </div>
