--- a/greatKanji/kanji/views/index.html
+++ b/greatKanji/kanji/views/index.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Flashcards</title>
+    <title>Kanji Kings</title>
   </head>
   <body>
     <div class="container-fluid" ng-App="app">
