--- a/templates/ML/index.html
+++ b/templates/ML/index.html
@@ -28,6 +28,7 @@
   <link href="dist/css/eightAwardWinners.css" rel="stylesheet">
   <link href="dist/css/nineGallery.css" rel="stylesheet">
   <link href="dist/css/tenContact.css" rel="stylesheet">
+  <link href="../lity-2.3.0/dist/lity.css" rel="stylesheet">
 </head>
 
 <body>
@@ -214,7 +215,7 @@
       </div>
     </div>
     <div data-section="5yourDonationsAtWork" class="row">
-      <section id="sectionFive">
+      <section class="col-md-12" id="sectionFive">
         <div class="col-md-12" id="sectionFiveContainer">
           <div id="yourDTitleContainer">
             <span></span>
@@ -272,8 +273,78 @@
             <div class="titleText">What's new</div>
             <div class="centeredLine"></div>
           </div>
-          <div class="owl-two owl-carousel owl-theme">
+          <div class="lity-hide">
+            <div class="owl-news owl-carousel owl-theme">
+              <div id="article1" class="item lityItem">
+                <img class="full" alt="itemPic" src="dist/assets/images/1200x675-4-.-320.jpg" srcset="dist/assets/images/1200x675-4-.-640.jpg 640w, dist/assets/images/1200x675-4-.-900.jpg 900w, dist/assets/images/1200x675-4-.-1200.jpg 1200w">
+                <div class="detailContainer">
+                  <div class="type">
+                    Miner's Lamp
+                  </div>
+                  <div class=""><img src="dist/assets/svg/Flame.svg" alt=""></div>
+                  <div class="pipe">|</div>
+                  <div class="date">Sept 21, 2017</div>
+                </div>
+                <div class="title">
+                  Antonio Conte has been speaking
+                </div>
+                <div class="content">
+                  Antonio Conte has been speaking about the qualities of new signing Danny Drinkwater, as well as the midfielder’s relationship with N’Golo Kante, ahead of today’s visit to their former club Leicester City. Drinkwater was one of two deadline-day arrivals
+                  at Stamford Bridge along with Italian defender Davide Zappacosta, who signed from Torino, and could potentially make his Chelsea debut this afternoon.During the 2015/16 campaign Drinkwater formed a formidable midfield partnership withKante
+                  as Leicester defied the odds to win the Premier League title, and Conte believes they will work well together once again.‘I think Danny is a really good player,’ said Conte. ‘Two years ago together with N’Golo they won the league. They played
+                  regularly and showed how strong they were.‘Danny is a strong player who can help us. The midfield is very important. I need midfielders with particular characteristics which he has. Now he must find his best physical condition to be ready
+                  tohelp us.’Conte also explained why the fact we have signed two new players will not lead to a change in shape or system for his side.‘We want to continue to play with this system because, don’t forget, there are 11 players who played last
+                  season and we changed our system to give them the best condition to exploit their talent. With the new signings we have to try to give them the best chance to be in top condition.’
 
+                </div>
+              </div>
+              <div id="article2" class="item lityItem">
+                <img class="full" alt="itemPic" src="dist/assets/images/1200x675-1--320.jpg" srcset="dist/assets/images/1200x675-1--640.jpg 640w, dist/assets/images/1200x675-1--900.jpg 900w, dist/assets/images/1200x675-1--1200.jpg 1200w">
+                <div class="detailContainer">
+                  <div class="type">
+                    News article
+                  </div>
+                  <div class=""><img src="dist/assets/svg/Newspaper.svg" alt=""></div>
+                  <div class="pipe">|</div>
+                  <div class="date">Sept 22, 2017</div>
+                </div>
+                <div class="title">
+                  Just the name of another news article that will be a bit long
+                </div>
+                <div class="content">
+                  In their Man United game, Jose Mourinho had special measures to deal with Leicester’s biggest threat: wingers Demarai Gray and Marc Albrighton, forwards Jamie Vardy, and now Kelechi Iheanacho, finding space behind the defence from raking passes by the
+                  likes of Riyad Mahrez. Vardy, with Shinji Okazaki just behind, gave the Gunners’ rearguard a tough ride at times on the opening day but the Red Devils defended deep and blocked channels in midfield, forcing him into wide areas. Chelsea may
+                  try to win the battle for midfield and stifle the hosts’ danger men in similar fashion.
+                </div>
+              </div>
+              <div id="article3" class="item lityItem">
+                <img class="full" alt="itemPic" src="dist/assets/images/1200x675-2-.-320.jpg" srcset="dist/assets/images/1200x675-2-.-640.jpg 640w, dist/assets/images/1200x675-2-.-900.jpg 900w, dist/assets/images/1200x675-2-.-1200.jpg 1200w">
+                <div class="detailContainer">
+                  <div class="type">
+                    Miner's Lamp
+                  </div>
+                  <div class=""><img src="dist/assets/svg/Flame.svg" alt=""></div>
+                  <div class="pipe">|</div>
+                  <div class="date">Sept 23, 2017</div>
+                </div>
+                <div class="title">
+                  Title of article
+                </div>
+                <div class="content">
+                  Just over a month after he was a late substitute in the Community Shield match, Toni Rudiger is facing his first game as a Chelsea player outside of London having been an ever-present in our league campaign so far. He has also been in action for Germany
+                  over the international break, with notable success too, so the official Chelsea website sat down with the summer addition to the defence to look back at the opening weeks and ahead to games to come, including this afternoon’s fixture in
+                  Leicester. He also has an insight into another addition to the squad…IT HAS BEEN A PRETTY BUSY FIRST MONTH OF THE SEASON FOR YOU…‘For me it was important to adapt to the new place, to the new club, to the new country, and I have to say thank
+                  you to the guys and to the staff as they helped me a lot.‘To adapt it has been good to play games. Of course I came here because I want to play and I want to develop myself, and sometimes in life it is like this, someone gets suspended or
+                  injured. It is not that I wish that for my team-mates of course, but sometimes football works like this and then I have the chance to show myself very quickly in this team.‘I think it was positive for me and I would like to continue like
+                  this but it always depends on my effort in the training, and also in the games, and the coach decides.’
+
+                </div>
+              </div>
+            </div>
+         </div>
+
+          <div class="owl-two owl-carousel owl-theme">
+           <a href="#article1" data-lightbox>
             <div class="item">
               <img class="preview" alt="itemPic" src="dist/assets/images/1200x675-4-.-320.jpg" srcset="dist/assets/images/1200x675-4-.-640.jpg 640w, dist/assets/images/1200x675-4-.-900.jpg 900w, dist/assets/images/1200x675-4-.-1200.jpg 1200w">
               <div class="detailContainer">
@@ -297,7 +368,8 @@
 
               </div>
             </div>
-
+           </a>
+           <a href="#article2" data-lightbox>
             <div class="item">
               <img class="preview" alt="itemPic" src="dist/assets/images/1200x675-1--320.jpg" srcset="dist/assets/images/1200x675-1--640.jpg 640w, dist/assets/images/1200x675-1--900.jpg 900w, dist/assets/images/1200x675-1--1200.jpg 1200w">
               <div class="detailContainer">
@@ -317,7 +389,8 @@
                 try to win the battle for midfield and stifle the hosts’ danger men in similar fashion.
               </div>
             </div>
-
+           </a>
+           <a href="#article3" data-lightbox>
             <div class="item">
               <img class="preview" alt="itemPic" src="dist/assets/images/1200x675-2-.-320.jpg" srcset="dist/assets/images/1200x675-2-.-640.jpg 640w, dist/assets/images/1200x675-2-.-900.jpg 900w, dist/assets/images/1200x675-2-.-1200.jpg 1200w">
               <div class="detailContainer">
@@ -341,7 +414,7 @@
 
               </div>
             </div>
-
+            </a>
             <div class="item">
               <img class="preview" alt="itemPic" src="dist/assets/images/1200x675-3-.-320.jpg" srcset="dist/assets/images/1200x675-3-.-640.jpg 640w, dist/assets/images/1200x675-3-.-900.jpg 900w, dist/assets/images/1200x675-3-.-1200.jpg 1200w">
               <div class="detailContainer">
@@ -370,7 +443,7 @@
         </div>
     </div>
     <div data-section="7donorLogos" class="row">
-      <section id="sectionSeven">
+      <section class="col-md-12" id="sectionSeven">
         <div class="col-md-12" id="sectionSevenContainer">
           <div class="headingTitleContainer">
             <div class="titleText">2017 Donors</div>
@@ -647,6 +720,7 @@
 </div><!--container-->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="dist/js/lightgallery.min.js"></script>
@@ -656,22 +730,36 @@
     <script src="dist/js/lg-share.min.js"></script>
     <script src="dist/js/lg-zoom.min.js"></script>
     <script src="dist/js/owl.carousel.min.js"></script>
+    <script type="text/javascript" src="../lity-2.3.0/dist/lity.js"></script>
     <script type="text/javascript">
       /* JavaScript Media Queries */ ;
       (function($, window) {
         if (matchMedia) {
-          var mq = window.matchMedia("(min-width: 540px)");
+          var mq = window.matchMedia("(min-width: 901px)");
           mq.addListener(widthChange);
           widthChange(mq);
         }
 
         // media query change
         function widthChange(mq) {
-          console.log("width over 600");
-          var msg = (mq.matches ? "more" : "less") + " than 600 pixels";
+          console.log("width over 901");
+          var msg = (mq.matches ? "more" : "less") + " than 901 pixels";
           if (mq.matches) {
-            console.log("over 600 " + msg);
+            console.log("over 901 " + msg);
+            $(document).ready(function(){
+              $("#newsContainer").find(".item").off("click");
+              $(document).on('click', '[data-lightbox]', lity);
+            })
           } else {
+            $(document).ready(function(){
+              $(document).on('off', '[data-lightbox]');
+              $("#newsContainer").find(".item").on("click", function() {
+                console.log(".content");
+                $(this).find(".content").toggleClass("long");
+              })
+
+            })
+
             console.log("no matches");
           }
         }
@@ -718,15 +806,44 @@
               $(".quote[data-id='" + id + "']").fadeIn("fast");
             })
 /*
+            $(".startOwl").on("click", function(){
+              var startPos = $(this).attr("data-start");
+              console.log("ioone!");
+              $(".lilyItem").hide();
+
+            })*/
+
+
+
+
+            $(document).on('lity:open', function(event, instance) {
+                console.log('Lightbox opened');
+
+                $('.owl-news').owlCarousel({
+                  center: false,
+                  items:1,
+                  loop: true,
+                  nav: false,
+                //  startPosition:startPos,
+                  dots: false,
+                  onDestroy:function (){
+                    console.log("destoryed@!!");
+                  }
+                });
+
+            });
+
+            $("body").on("click", ".lity-close",function(){
+              console.log("closed owl");
+              $('.owl-news').owlCarousel('destroy');
+              });
+/*
             $("#newsContainer").find(".content").on("click", function() {
               console.log(".content");
               $(this).toggleClass("long");
             })
             */
-            $("#newsContainer").find(".item").on("click", function() {
-              console.log(".content");
-              $(this).find(".content").toggleClass("long");
-            })
+
             $(".sectionThreeItemContainer").on("click", function() {
               console.log(".content");
               $(this).find(".sectionThreeItemBlurb").toggleClass("long");
@@ -759,7 +876,7 @@
 
             $('.owl-one').html(topSliderHtml).owlCarousel({
               loop: true,
-              autoplay: true,
+              autoplay: false,
               dots: false,
               responsive: {
                 0: {
